4.0 regression: VLC favors KMS over display protocols

For 2 decades, VLC has always favored rendering the video in a window through the display server over non-arbitrated full-screen mode.

Now it tries to use KMS first. In most cases, the user has no permission, so this only causes a noisy error, but if the user does have permission, the result is pretty terrible UX.