kms: drop window priority below xcb/xdg-shell

The KMS window module shouldn't be loaded when a display server is
running and available from the environment. A user with X11 or Wayland
available can still enforce the kms window module by cleaning the
environment variable from wayland and X11.

Fix #26471